--- a/render.yaml
+++ b/render.yaml
@@ -1,9 +1,9 @@
 services:
   - type: web
-    name: my-django-app
+    name: https://project3-2025a-dbseitenfus-backend.onrender.com
     env: python
-    buildCommand: |
-      pip install -r requirements.txt
-      chmod +x init.sh
-      ./init.sh
-    startCommand: gunicorn myproject.wsgi:application
+    buildCommand: pip install -r requirements.txt
+    startCommand: |
+      python manage.py migrate &&
+      python manage.py collectstatic --noinput &&
+      python manage.py runserver 0.0.0.0:8000
